cabal-version:       1.24
name:                unlifted-async
version:             0.10.1.1
synopsis:            Run lifted IO operations asynchronously and wait for their results
homepage:            https://github.com/maoe/lifted-async
bug-reports:         https://github.com/maoe/lifted-async/issues
license:             BSD3
license-file:        LICENSE
author:              Mitsutoshi Aoe
maintainer:          Mitsutoshi Aoe <me@maoe.name>
copyright:           Copyright (C) 2012-2020 Mitsutoshi Aoe
category:            Concurrency
build-type:          Simple
tested-with:
  GHC == 8.10.1

extra-source-files:
  README.md
  CHANGELOG.md

description:
  This package provides IO operations from @async@ package lifted to any
  instance of 'MonadUnliftIO'.

library
  exposed-modules:
    Control.Concurrent.Async.Unlifted
  build-depends:
      base >= 4.5 && < 4.15
    , async >= 2.2 && < 2.3
    , unliftio-core
  ghc-options: -Wall
  hs-source-dirs: src
  default-language: Haskell2010

test-suite test-unlifted-async
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: TestSuite.hs
  other-modules:
    Test.Async.Common
    Test.Async.IO
    Test.Async.Reader
  ghc-options: -Wall -threaded
  build-depends:
      base
    , HUnit
    , unlifted-async
    , lifted-base
    , monad-control
    , mtl
    , tasty
    , tasty-expected-failure < 0.12
    , tasty-hunit >= 0.9 && < 0.11
    , tasty-th
  default-language: Haskell2010

test-suite regression-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: RegressionTests.hs
  ghc-options: -Wall -threaded
  build-depends:
      base
    , async
    , unlifted-async
    , mtl
    , tasty-hunit >= 0.9 && < 0.11
    , tasty-th
  default-language: Haskell2010

benchmark benchmark-unlifted-async
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: Benchmarks.hs
  ghc-options: -Wall
  build-depends:
      base
    , async
    , criterion
    , deepseq
    , unlifted-async
  default-language: Haskell2010

benchmark benchmark-unlifted-async-threaded
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: Benchmarks.hs
  ghc-options: -Wall -threaded
  build-depends:
      base
    , async
    , criterion
    , deepseq
    , unlifted-async
  default-language: Haskell2010
